--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             
         <ul></ul>
     </div>
+<img src="assets/images/sabbath.jpg">
 <script src="assets/main.js"></script>
 </body>
 </html>
