There was something awry!

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             
         <ul></ul>
     </div>
-<img src="assets/images/sabbath.jpg">
+<div class ='container-fluid' id='image'>
+    <img src="assets/images/sabbath.jpg">
+</div>
+
 <script src="assets/main.js"></script>
+
 </body>
 </html>
